crates/daemon/tests/snapshots/sql_foundation__sql_foundation_refreshes_ready_allocation_env_when_context_changes.snap
---
source: crates/daemon/tests/sql_foundation.rs
expression: snapshot
---
(
    [
        RecordedSqlAdminOperation {
            engine: Mysql,
            database: "acme_test_app_db",
            statement: "CREATE DATABASE IF NOT EXISTS `acme_test_app_db`",
        },
    ],
    [
        ResourceAllocationRecord {
            id: "allocation_000001",
            project_id: "<project_id>",
            resource_name: "mysql",
            track: "8.0",
            allocation_name: "app-db",
            generated_name: "acme_test_app_db",
            env: {
                "database": "acme_test_app_db",
                "host": "127.0.0.1",
                "password": "secret",
                "port": "19002",
                "url": "mysql://root:secret@127.0.0.1:19002/acme_test_app_db",
                "username": "root",
            },
            status: Ready,
            created_at: "<timestamp>",
            updated_at: "<timestamp>",
        },
    ],
)
