crates/daemon/tests/snapshots/sql_foundation__sql_foundation_rejects_unsafe_database_identifier_before_connecting.snap
---
source: crates/daemon/tests/sql_foundation.rs
expression: snapshot
---
"Err(\n    InvalidSqlIdentifier {\n        identifier: \"bad-name\",\n    },\n)"
